internal/grammars/dnaca/dnac_01_walker_parser.go
// Code generated from DNAC_01_Walker.g4 by ANTLR 4.7.1. DO NOT EDIT.

package dnaca // DNAC_01_Walker
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/wxio/goantlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'{'", "'}'", "'['", "']'", "'='", "'\"'", "'''", "';'", "'::'", "':'",
	"'.'", "','", "'<'", "'>'", "'*'", "'@'",
}
var symbolicNames = []string{
	"", "LCUR", "RCUR", "LSQ", "RSQ", "EQ", "DQ", "SQ", "SEMI", "DCOLON", "COLON",
	"DOT", "COMMA", "LCHEVR", "RCHEVR", "STAR", "AT", "STR", "ID", "INT", "FLT",
	"WS", "LINE_DOC", "LINE_COMMENT", "DOWN", "UP", "ROOT", "ERROR", "ADL",
	"Module", "Import", "Annotation", "Struct", "Union", "Newtype", "Type",
	"TypeParam", "TypeExpr", "TypeExprElem", "Field", "Json", "JsonStr", "JsonBool",
	"JsonNull", "JsonInt", "JsonFloat", "JsonArray", "JsonObj", "ModuleAnno",
	"DeclAnno", "FieldAnno", "Name", "Exnotation",
}

var ruleNames = []string{
	"adl", "tld", "annotation", "typeExpr_", "typeExprElem_", "jsonVal",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type DNAC_01_Walker struct {
	*antlr.BaseParser
}

func NewDNAC_01_Walker(input antlr.TokenStream) *DNAC_01_Walker {
	this := new(DNAC_01_Walker)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "DNAC_01_Walker.g4"

	return this
}

// DNAC_01_Walker tokens.
const (
	DNAC_01_WalkerEOF          = antlr.TokenEOF
	DNAC_01_WalkerLCUR         = 1
	DNAC_01_WalkerRCUR         = 2
	DNAC_01_WalkerLSQ          = 3
	DNAC_01_WalkerRSQ          = 4
	DNAC_01_WalkerEQ           = 5
	DNAC_01_WalkerDQ           = 6
	DNAC_01_WalkerSQ           = 7
	DNAC_01_WalkerSEMI         = 8
	DNAC_01_WalkerDCOLON       = 9
	DNAC_01_WalkerCOLON        = 10
	DNAC_01_WalkerDOT          = 11
	DNAC_01_WalkerCOMMA        = 12
	DNAC_01_WalkerLCHEVR       = 13
	DNAC_01_WalkerRCHEVR       = 14
	DNAC_01_WalkerSTAR         = 15
	DNAC_01_WalkerAT           = 16
	DNAC_01_WalkerSTR          = 17
	DNAC_01_WalkerID           = 18
	DNAC_01_WalkerINT          = 19
	DNAC_01_WalkerFLT          = 20
	DNAC_01_WalkerWS           = 21
	DNAC_01_WalkerLINE_DOC     = 22
	DNAC_01_WalkerLINE_COMMENT = 23
	DNAC_01_WalkerDOWN         = 24
	DNAC_01_WalkerUP           = 25
	DNAC_01_WalkerROOT         = 26
	DNAC_01_WalkerERROR        = 27
	DNAC_01_WalkerADL          = 28
	DNAC_01_WalkerModule       = 29
	DNAC_01_WalkerImport       = 30
	DNAC_01_WalkerAnnotation   = 31
	DNAC_01_WalkerStruct       = 32
	DNAC_01_WalkerUnion        = 33
	DNAC_01_WalkerNewtype      = 34
	DNAC_01_WalkerType         = 35
	DNAC_01_WalkerTypeParam    = 36
	DNAC_01_WalkerTypeExpr     = 37
	DNAC_01_WalkerTypeExprElem = 38
	DNAC_01_WalkerField        = 39
	DNAC_01_WalkerJson         = 40
	DNAC_01_WalkerJsonStr      = 41
	DNAC_01_WalkerJsonBool     = 42
	DNAC_01_WalkerJsonNull     = 43
	DNAC_01_WalkerJsonInt      = 44
	DNAC_01_WalkerJsonFloat    = 45
	DNAC_01_WalkerJsonArray    = 46
	DNAC_01_WalkerJsonObj      = 47
	DNAC_01_WalkerModuleAnno   = 48
	DNAC_01_WalkerDeclAnno     = 49
	DNAC_01_WalkerFieldAnno    = 50
	DNAC_01_WalkerName         = 51
	DNAC_01_WalkerExnotation   = 52
)

// DNAC_01_Walker rules.
const (
	DNAC_01_WalkerRULE_adl           = 0
	DNAC_01_WalkerRULE_tld           = 1
	DNAC_01_WalkerRULE_annotation    = 2
	DNAC_01_WalkerRULE_typeExpr_     = 3
	DNAC_01_WalkerRULE_typeExprElem_ = 4
	DNAC_01_WalkerRULE_jsonVal       = 5
)

// IAdlContext is an interface to support dynamic dispatch.
type IAdlContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAdlContext differentiates from other interfaces.
	IsAdlContext()
}

type AdlContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAdlContext() *AdlContext {
	var p = new(AdlContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DNAC_01_WalkerRULE_adl
	return p
}

func (*AdlContext) IsAdlContext() {}

func NewAdlContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AdlContext {
	var p = new(AdlContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DNAC_01_WalkerRULE_adl

	return p
}

func (s *AdlContext) GetParser() antlr.Parser { return s.parser }

func (s *AdlContext) AllDOWN() []antlr.TerminalNode {
	return s.GetTokens(DNAC_01_WalkerDOWN)
}

func (s *AdlContext) DOWN(i int) antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, i)
}

func (s *AdlContext) ADL() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerADL, 0)
}

func (s *AdlContext) Tld() ITldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITldContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITldContext)
}

func (s *AdlContext) AllUP() []antlr.TerminalNode {
	return s.GetTokens(DNAC_01_WalkerUP)
}

func (s *AdlContext) UP(i int) antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, i)
}

func (s *AdlContext) EOF() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerEOF, 0)
}

func (s *AdlContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AdlContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AdlContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.EnterAdl(s)
	}
}

func (s *AdlContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.ExitAdl(s)
	}
}

func (p *DNAC_01_Walker) Adl() (localctx IAdlContext) {
	localctx = NewAdlContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DNAC_01_WalkerRULE_adl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(12)
		p.Match(DNAC_01_WalkerDOWN)
	}
	{
		p.SetState(13)
		p.Match(DNAC_01_WalkerADL)
	}
	{
		p.SetState(14)
		p.Match(DNAC_01_WalkerDOWN)
	}
	{
		p.SetState(15)
		p.Tld()
	}
	{
		p.SetState(16)
		p.Match(DNAC_01_WalkerUP)
	}
	{
		p.SetState(17)
		p.Match(DNAC_01_WalkerUP)
	}
	{
		p.SetState(18)
		p.Match(DNAC_01_WalkerEOF)
	}

	return localctx
}

// ITldContext is an interface to support dynamic dispatch.
type ITldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTldContext differentiates from other interfaces.
	IsTldContext()
}

type TldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTldContext() *TldContext {
	var p = new(TldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DNAC_01_WalkerRULE_tld
	return p
}

func (*TldContext) IsTldContext() {}

func NewTldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TldContext {
	var p = new(TldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DNAC_01_WalkerRULE_tld

	return p
}

func (s *TldContext) GetParser() antlr.Parser { return s.parser }

func (s *TldContext) CopyFrom(ctx *TldContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *TldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type NameNodeContext struct {
	*TldContext
}

func NewNameNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NameNodeContext {
	var p = new(NameNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *NameNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NameNodeContext) Name() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerName, 0)
}

func (s *NameNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, 0)
}

func (s *NameNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, 0)
}

func (s *NameNodeContext) AllAnnotation() []IAnnotationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnnotationContext)(nil)).Elem())
	var tst = make([]IAnnotationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnnotationContext)
		}
	}

	return tst
}

func (s *NameNodeContext) Annotation(i int) IAnnotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAnnotationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAnnotationContext)
}

func (s *NameNodeContext) TypeParam() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerTypeParam, 0)
}

func (s *NameNodeContext) AllTld() []ITldContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITldContext)(nil)).Elem())
	var tst = make([]ITldContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITldContext)
		}
	}

	return tst
}

func (s *NameNodeContext) Tld(i int) ITldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITldContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITldContext)
}

func (s *NameNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.EnterNameNode(s)
	}
}

func (s *NameNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.ExitNameNode(s)
	}
}

type TypeNodeContext struct {
	*TldContext
}

func NewTypeNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TypeNodeContext {
	var p = new(TypeNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *TypeNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeNodeContext) Type() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerType, 0)
}

func (s *TypeNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, 0)
}

func (s *TypeNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, 0)
}

func (s *TypeNodeContext) AllAnnotation() []IAnnotationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnnotationContext)(nil)).Elem())
	var tst = make([]IAnnotationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnnotationContext)
		}
	}

	return tst
}

func (s *TypeNodeContext) Annotation(i int) IAnnotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAnnotationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAnnotationContext)
}

func (s *TypeNodeContext) TypeParam() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerTypeParam, 0)
}

func (s *TypeNodeContext) TypeExpr_() ITypeExpr_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeExpr_Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeExpr_Context)
}

func (s *TypeNodeContext) AllJsonVal() []IJsonValContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IJsonValContext)(nil)).Elem())
	var tst = make([]IJsonValContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IJsonValContext)
		}
	}

	return tst
}

func (s *TypeNodeContext) JsonVal(i int) IJsonValContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IJsonValContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IJsonValContext)
}

func (s *TypeNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.EnterTypeNode(s)
	}
}

func (s *TypeNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.ExitTypeNode(s)
	}
}

type ExnotationNodeContext struct {
	*TldContext
}

func NewExnotationNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExnotationNodeContext {
	var p = new(ExnotationNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *ExnotationNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExnotationNodeContext) Exnotation() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerExnotation, 0)
}

func (s *ExnotationNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, 0)
}

func (s *ExnotationNodeContext) JsonVal() IJsonValContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IJsonValContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IJsonValContext)
}

func (s *ExnotationNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, 0)
}

func (s *ExnotationNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.EnterExnotationNode(s)
	}
}

func (s *ExnotationNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.ExitExnotationNode(s)
	}
}

type NameBodyNodeContext struct {
	*TldContext
}

func NewNameBodyNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NameBodyNodeContext {
	var p = new(NameBodyNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *NameBodyNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NameBodyNodeContext) Field() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerField, 0)
}

func (s *NameBodyNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, 0)
}

func (s *NameBodyNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, 0)
}

func (s *NameBodyNodeContext) AllAnnotation() []IAnnotationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnnotationContext)(nil)).Elem())
	var tst = make([]IAnnotationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnnotationContext)
		}
	}

	return tst
}

func (s *NameBodyNodeContext) Annotation(i int) IAnnotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAnnotationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAnnotationContext)
}

func (s *NameBodyNodeContext) TypeExpr_() ITypeExpr_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeExpr_Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeExpr_Context)
}

func (s *NameBodyNodeContext) JsonVal() IJsonValContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IJsonValContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IJsonValContext)
}

func (s *NameBodyNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.EnterNameBodyNode(s)
	}
}

func (s *NameBodyNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.ExitNameBodyNode(s)
	}
}

func (p *DNAC_01_Walker) Tld() (localctx ITldContext) {
	localctx = NewTldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DNAC_01_WalkerRULE_tld)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(85)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case DNAC_01_WalkerName:
		localctx = NewNameNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(20)
			p.Match(DNAC_01_WalkerName)
		}
		p.SetState(38)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DNAC_01_WalkerDOWN {
			{
				p.SetState(21)
				p.Match(DNAC_01_WalkerDOWN)
			}
			p.SetState(25)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == DNAC_01_WalkerAnnotation {
				{
					p.SetState(22)
					p.Annotation()
				}

				p.SetState(27)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			p.SetState(29)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == DNAC_01_WalkerTypeParam {
				{
					p.SetState(28)
					p.Match(DNAC_01_WalkerTypeParam)
				}

			}
			p.SetState(34)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for ((_la-35)&-(0x1f+1)) == 0 && ((1<<uint((_la-35)))&((1<<(DNAC_01_WalkerType-35))|(1<<(DNAC_01_WalkerField-35))|(1<<(DNAC_01_WalkerName-35))|(1<<(DNAC_01_WalkerExnotation-35)))) != 0 {
				{
					p.SetState(31)
					p.Tld()
				}

				p.SetState(36)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(37)
				p.Match(DNAC_01_WalkerUP)
			}

		}

	case DNAC_01_WalkerType:
		localctx = NewTypeNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(40)
			p.Match(DNAC_01_WalkerType)
		}
		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DNAC_01_WalkerDOWN {
			{
				p.SetState(41)
				p.Match(DNAC_01_WalkerDOWN)
			}
			p.SetState(45)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == DNAC_01_WalkerAnnotation {
				{
					p.SetState(42)
					p.Annotation()
				}

				p.SetState(47)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			p.SetState(49)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == DNAC_01_WalkerTypeParam {
				{
					p.SetState(48)
					p.Match(DNAC_01_WalkerTypeParam)
				}

			}
			p.SetState(52)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == DNAC_01_WalkerTypeExpr {
				{
					p.SetState(51)
					p.TypeExpr_()
				}

			}
			p.SetState(57)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for ((_la-41)&-(0x1f+1)) == 0 && ((1<<uint((_la-41)))&((1<<(DNAC_01_WalkerJsonStr-41))|(1<<(DNAC_01_WalkerJsonBool-41))|(1<<(DNAC_01_WalkerJsonNull-41))|(1<<(DNAC_01_WalkerJsonInt-41))|(1<<(DNAC_01_WalkerJsonFloat-41))|(1<<(DNAC_01_WalkerJsonArray-41))|(1<<(DNAC_01_WalkerJsonObj-41)))) != 0 {
				{
					p.SetState(54)
					p.JsonVal()
				}

				p.SetState(59)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(60)
				p.Match(DNAC_01_WalkerUP)
			}

		}

	case DNAC_01_WalkerExnotation:
		localctx = NewExnotationNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(63)
			p.Match(DNAC_01_WalkerExnotation)
		}
		{
			p.SetState(64)
			p.Match(DNAC_01_WalkerDOWN)
		}
		{
			p.SetState(65)
			p.JsonVal()
		}
		{
			p.SetState(66)
			p.Match(DNAC_01_WalkerUP)
		}

	case DNAC_01_WalkerField:
		localctx = NewNameBodyNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(68)
			p.Match(DNAC_01_WalkerField)
		}
		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == DNAC_01_WalkerDOWN {
			{
				p.SetState(69)
				p.Match(DNAC_01_WalkerDOWN)
			}
			p.SetState(73)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == DNAC_01_WalkerAnnotation {
				{
					p.SetState(70)
					p.Annotation()
				}

				p.SetState(75)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			p.SetState(77)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == DNAC_01_WalkerTypeExpr {
				{
					p.SetState(76)
					p.TypeExpr_()
				}

			}
			p.SetState(80)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if ((_la-41)&-(0x1f+1)) == 0 && ((1<<uint((_la-41)))&((1<<(DNAC_01_WalkerJsonStr-41))|(1<<(DNAC_01_WalkerJsonBool-41))|(1<<(DNAC_01_WalkerJsonNull-41))|(1<<(DNAC_01_WalkerJsonInt-41))|(1<<(DNAC_01_WalkerJsonFloat-41))|(1<<(DNAC_01_WalkerJsonArray-41))|(1<<(DNAC_01_WalkerJsonObj-41)))) != 0 {
				{
					p.SetState(79)
					p.JsonVal()
				}

			}
			{
				p.SetState(82)
				p.Match(DNAC_01_WalkerUP)
			}

		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAnnotationContext is an interface to support dynamic dispatch.
type IAnnotationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAnnotationContext differentiates from other interfaces.
	IsAnnotationContext()
}

type AnnotationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAnnotationContext() *AnnotationContext {
	var p = new(AnnotationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DNAC_01_WalkerRULE_annotation
	return p
}

func (*AnnotationContext) IsAnnotationContext() {}

func NewAnnotationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AnnotationContext {
	var p = new(AnnotationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DNAC_01_WalkerRULE_annotation

	return p
}

func (s *AnnotationContext) GetParser() antlr.Parser { return s.parser }

func (s *AnnotationContext) Annotation() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerAnnotation, 0)
}

func (s *AnnotationContext) DOWN() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, 0)
}

func (s *AnnotationContext) JsonVal() IJsonValContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IJsonValContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IJsonValContext)
}

func (s *AnnotationContext) UP() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, 0)
}

func (s *AnnotationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AnnotationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AnnotationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.EnterAnnotation(s)
	}
}

func (s *AnnotationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DNAC_01_WalkerListener); ok {
		listenerT.ExitAnnotation(s)
	}
}

func (p *DNAC_01_Walker) Annotation() (localctx IAnnotationContext) {
	localctx = NewAnnotationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DNAC_01_WalkerRULE_annotation)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Match(DNAC_01_WalkerAnnotation)
	}
	p.SetState(92)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == DNAC_01_WalkerDOWN {
		{
			p.SetState(88)
			p.Match(DNAC_01_WalkerDOWN)
		}
		{
			p.SetState(89)
			p.JsonVal()
		}
		{
			p.SetState(90)
			p.Match(DNAC_01_WalkerUP)
		}

	}

	return localctx
}

// ITypeExpr_Context is an interface to support dynamic dispatch.
type ITypeExpr_Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeExpr_Context differentiates from other interfaces.
	IsTypeExpr_Context()
}

type TypeExpr_Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeExpr_Context() *TypeExpr_Context {
	var p = new(TypeExpr_Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DNAC_01_WalkerRULE_typeExpr_
	return p
}

func (*TypeExpr_Context) IsTypeExpr_Context() {}

func NewTypeExpr_Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeExpr_Context {
	var p = new(TypeExpr_Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DNAC_01_WalkerRULE_typeExpr_

	return p
}

func (s *TypeExpr_Context) GetParser() antlr.Parser { return s.parser }

func (s *TypeExpr_Context) TypeExpr() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerTypeExpr, 0)
}

func (s *TypeExpr_Context) DOWN() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerDOWN, 0)
}

func (s *TypeExpr_Context) UP() antlr.TerminalNode {
	return s.GetToken(DNAC_01_WalkerUP, 0)
}

func (s *TypeExpr_Context) AllTypeExprElem_() []ITypeExprElem_Context {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITypeExprElem_Context)(nil)).Elem())
	var tst = make([]ITypeExprElem_Context, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITypeExprElem_Context)
		}
	}
